syntax = "proto3";

message News {
    string id = 1; // id values means put this property as the first in json object
    string title = 2;// put title as the second property
    string body = 3;
    string postImage = 4;
}
message NewsId{
    string id=1;
}
service NewsService {
    rpc GetAllNews (Empty) returns (NewsList) {}
    rpc AddNews (News) returns (News) {}
    rpc DeleteNews (NewsId) returns (NewsList) {}
    rpc streamfunc(stream News) returns (stream NewsList) {} // now we can listen to this function by server
    //stream as parameter means that client may do changes to server. https://www.youtube.com/watch?v=4ohwkWVgEZM watch from 4:00
    //stream type as returned means that result from server to client
}


message Empty {}

message NewsList {
 repeated   News news = 1;// repeat type to define an array and value to put this array as the first property in returned jsonObject
}
